--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,6 +11,9 @@ services:
       - /app/node_modules
     ports:
       - '3000:3000'
+    networks:
+      - auth-network
+      - event-network
 
   auth-server:
     container_name: auth-server
@@ -20,8 +23,8 @@ services:
     volumes:
       - ./auth-server:/app
       - /app/node_modules
-    ports:
-      - '3001:3000'
+    # ports:
+    #   - '3001:3000' # 로컬 접근용
     environment:
       - MONGO_URI=mongodb://auth-mongo:27017/auth-db
     networks:
@@ -47,18 +50,21 @@ services:
     volumes:
       - ./event-server:/app
       - /app/node_modules
-    ports:
-      - '3002:3000'
+    # ports:
+    #   - '3002:3000' # 로컬 접근용
     environment:
       - MONGO_URI=mongodb://event-mongo:27017/event-db
     networks:
       - event-network
+      - auth-network
     depends_on:
       - event-mongo
 
   event-mongo:
     image: mongo:8.0
     container_name: event-mongo
+    ports:
+      - "27018:27017" # 로컬 접근용
     volumes:
       - event-mongo-data:/data/db
     networks:
